--- a/Rock-paper-scissors.html
+++ b/Rock-paper-scissors.html
@@ -7,6 +7,6 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-<script src="Rock-paper-scissorsv2.js"></script>
+<script src="Rock-paper-scissors.js"></script>
 </body>
 </html>
