--- a/Rock-paper-scissors.html
+++ b/Rock-paper-scissors.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="Rock-paper-scissors.js" defer></script>
+    <link rel="stylesheet" href="Rock-paper-scissors.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-<script src="Rock-paper-scissors.js"></script>
+    <div class="game">
+        <div class="gameTitle">Rock Paper Scissors</div>
+        <div class="buttonContainer">
+            <div class="option" id="rock">Rock</div>
+            <div class="option" id="paper">Paper</div>
+            <div class="option" id="scissors">Scissors</div>
+        </div>
+        <div class ="scoreContainer">
+            <div class="playerScoreBox">Player score: 0 </div>
+            <div class ="computerScoreBox">Computer score: 0 </div>
+        </div>
+        <div class="hands"></div>
+        <div class="winnerText"></div>
+        <div class="resetButton">Reset</div>
+    </div>
+
 </body>
 </html>
